[package]
name = "aam-hs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.8"
hyper = { version = "1.8.1", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.19", features = ["server-auto", "tokio"] }
tower = "0.5.3"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
arti-client =  { version = "0.38.0", features = ["ephemeral-keystore", "restricted-discovery", "onion-service-service", "onion-service-client", "experimental-api", "hs-pow-full", "keymgr"] }
tor-keymgr = { version = "0.38.0", features = ["ephemeral-keystore"] }
tor-hscrypto = "0.38.0"
tor-hsservice = "0.38.0"
tor-llcrypto = "0.38.0"
tor-config = "0.39.0"
tor-cell = "0.38.0"
tor-rtcompat = "0.38.0"

bip39 = "2.2.2"
futures-util = "0.3.31"
safelog = "0.7.1"
serde = { version = "1.0.149", features = ["derive"] }
rpassword = "7.4.0"
secrecy = "0.10.3"
zeroize = "1.8.1"
